# Starlight

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  package-lock.json  package.json
CMake/: PackageConfig.cmake
Source/Moonlight/: CMakeLists.txt
Source/Moonlight/Moonlight/: main.cpp
Source/Program/: CMakeLists.txt
Source/Program/Starlight/: main.cpp
Source/Program/Starlight/Editor/: Editor.cpp  Editor.hpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Starlight/: Runtime.cpp  Runtime.hpp
Source/Runtime/Starlight/Core/: Logging.cpp  Logging.hpp  Time.cpp  Time.hpp
Source/Starlight/: CMakeLists.txt
Source/Starlight/Starlight/Platform/: Main.cpp  Main.hpp  Window.cpp  Window.hpp
Source/Starlight/Starlight/Runtime/: Application.cpp  Application.hpp  Entity.cpp  Entity.hpp  System.cpp  System.hpp
